Add server node

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </form>
 
             <template id="template-message">
-                <li class="message">
+                <li class="message user">
                     <p>Первое сообщение</p>
                     <span></span>
                 </li>
@@ -33,3 +33,5 @@
     <script type="module" src="script/script.js"></script>
 </body>
 </html>
+
+<!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, cumque expedita architecto voluptatibus doloremque labore pariatur deleniti temporibus ullam vitae delectus molestias beatae repellendus sed magni repudiandae, eum fuga facere. -->
